# nushell-questions

./: Cargo.toml  README.md
src/: main.rs
