[package]
authors = ["Maximilian Roos <m@maxroos.com>"]
edition = "2018"
name = "amato"
version = "0.1.0"

[dependencies.futures]
features = ["compat"]
version = "0.3"

[dependencies]
clap = "*"
nu-cli = { git = "https://github.com/max-sixty/nushell", branch = "pub" }
nu-errors = { git = "https://github.com/max-sixty/nushell", branch = "pub" }
nu-parser = { git = "https://github.com/max-sixty/nushell", branch = "pub" }
nu-protocol = { git = "https://github.com/max-sixty/nushell", branch = "pub" }